--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
     "description": "",
     "main": "main.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "body-parser": "^1.20.0",
-      "ejs": "^3.1.6",
-      "express": "^4.17.3",
-      "express-session": "^1.17.2",
-      "multer": "^1.4.4"
+        "body-parser": "^1.20.0",
+        "ejs": "^3.1.6",
+        "express": "^4.17.3",
+        "express-session": "^1.17.2",
+        "mongodb": "^4.5.0",
+        "multer": "^1.4.4",
+        "mongoose":"*"
+        
     }
-  }
-  
+}
